work in progress

--- a/copyright.tex
+++ b/copyright.tex
@@ -7,7 +7,7 @@
 {\rm Prepared by Editorial Committe}\\
 {\rm Executive Director : Dr. Nandish Hanche}\\
 {\rm Published by JSS Granthamale, Mysuru}\\[8pt]
-{\rm Pages : ????? + 896}
+{\rm Pages : 38 + 896}
 
 \vspace{1cm}
 
@@ -25,7 +25,7 @@
 \medskip
 
 \noindent
-{\rm Printed at : ?????????????}
+{\rm Printed at : Lakshmi Printers, Bengaluru.}
 
 \vfill
 
@@ -44,14 +44,14 @@
 saMpAdane : saMpAdaka samiti,\\
 kAyaRnivARhaka saMpAdakaru : DA. naMdiVshf haMce\\
 parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru,\\[8pt]
-puTagaLu : {\rm ????? +} 896
+puTagaLu : 38 + 896
 
 \vspace{1cm}
 
 \noindent
 {\rm \copyright} parxkAshakaru\\[7pt]
-parxthama mudarxNa : 2019\\[7pt]
-parxtigaLu : 1000\\[10pt]
+parxthama mudarxNa : 2020\\[7pt]
+parxtigaLu : 2000\\[10pt]
 bele : \rupee
 
 \bigskip
@@ -62,7 +62,7 @@ akaSxra joVDaNe : shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf, perxY. li., sh
 \medskip
 
 \noindent
-mudarxkaru : ????????
+mudarxkaru : lakiSxV mudarxNAlaya, beMgaLUru.
 
 \newpage
 
