--- a/nivedane.tex
+++ b/nivedane.tex
@@ -35,7 +35,7 @@ I hinenxleyalilx BAratada oMdu parxmuKa dhamaRvAda viVrasheYva-liMgAyatada tAtit
 
 \medskip
 
-vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943 shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgatigaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVshaveMdare DA. esf.\break vidAyxshaMkararavaru basava samitige saMpAdisikoTaTx \textbf{viVrasheYva pAriBASika padakoVsha} hAgU eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTagaLanunx DA. esf. vidAyxshaMkararavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa viVrasheYva kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAriBASika padagaLanunx mAtarx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya viVrasheYva pAriBASika padakoVsha garxMthavanunx DA. eM. shivakumArasAvxmi, DA. si. shivakumArasAvxmi hAgU DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf. mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{samagarx viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
+vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943 shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgatigaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVshaveMdare DA. esf.\break vidAyxshaMkararavaru basava samitige saMpAdisikoTaTx \textbf{viVrasheYva pAriBASika padakoVsha} hAgU eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTagaLanunx DA. esf. vidAyxshaMkararavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa viVrasheYva kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAriBASika padagaLanunx mAtarx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya viVrasheYva pAriBASika padakoVsha garxMthavanunx DA. eM. shivakumArasAvxmi, DA. si. shivakumArasAvxmi hAgU DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf.\break mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{samagarx viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
 
 \medskip
 
@@ -43,7 +43,7 @@ I \textbf{shivapada ratanxkoVsha} niGaMTu rUpugoMDadedxV oMdu itihAsa. jeesfesf 
 
 \medskip
 
-I viSayavanunx baLika paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru, vijayapurada jAcnxna\-yoVgAsharxmada pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLoMdige  pArxsaMgikavAgi parxsAtxvisidAga avaru saMsakxqqta hAgU kananxDa viVrasheYva shAsatxrX garxMthagaLu, kAvayxgaLu hAgU vacanagaLanenxlAlx oLagoMDaMte samagarx pAriBASika padakoVsha racaneyAgabeVkAdudu agatayxveMdu  aBipArxyapaTaTxru. I viSayavanunx visatxqqtavAgi caciRsuva saluvAgi pUjayx sidedhxVshavxra mahAsAvxmigaLavaru sutUtxru shirxVkeSxVtarxkekx 2013ralilx Agamisida saMdaBaRdalilx niGaMTu pariNatara saBeyanunx EpaRDisalAgitutx. A saBeyalilx imamxDi shivabasava sAvxmigaLu, ecf. gaMgAdharanf, porx. esf. naMjuMDayayx, shirxV enf. \hbox{basavArAdhayx}, DA. Ti.vi. veMkaTAcala shAsitxrXV, porx. ji.esf. sidadhxliMgayayx, DA. go.ru. cananxbasapapx, DA. esf. vidAyxshaMkara, DA. enf.esf. tArAnAtha, DA. Ti.Arf. mahadeVvayayx, shirxV Arf. shivaNaNx, DA. enf.ji. mahadeVvapapx, Da. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, shirxV Arf.esf. pUNARnaMda muMtAdavaru BAgavahisidadxru.
+I viSayavanunx baLika paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru, vijayapurada jAcnxna\-yoVgAsharxmada pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLoMdige  pArxsaMgikavAgi parxsAtxvisidAga avaru saMsakxqqta hAgU kananxDa \hbox{viVrasheYva} shAsatxrX garxMthagaLu, kAvayxgaLu hAgU vacanagaLanenxlAlx oLagoMDaMte samagarx pAriBASika padakoVsha racaneyAgabeVkAdudu agatayxveMdu  aBipArxyapaTaTxru. I viSayavanunx visatxqqtavAgi caciRsuva saluvAgi pUjayx sidedhxVshavxra mahAsAvxmigaLavaru sutUtxru shirxVkeSxVtarxkekx 2013ralilx Agamisida saMdaBaRdalilx niGaMTu pariNatara saBeyanunx EpaRDisalAgitutx. A saBeyalilx imamxDi shivabasava sAvxmigaLu, ecf. gaMgAdharanf, porx. esf. naMjuMDayayx, shirxV enf. \hbox{basavArAdhayx}, DA. Ti.vi. veMkaTAcala shAsitxrXV, porx. ji.esf. sidadhxliMgayayx, DA. go.ru. cananxbasapapx, DA. esf. vidAyxshaMkara, DA. enf.esf. tArAnAtha, DA. Ti.Arf. mahadeVvayayx, shirxV Arf. shivaNaNx, DA. enf.ji. mahadeVvapapx, Da. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, shirxV Arf.esf. pUNARnaMda muMtAdavaru BAgavahisidadxru.
 
 \medskip
 
@@ -87,7 +87,7 @@ I kAyaRdalilx neravige baMdadudx ``vacana saMcaya DATfkAM'' aMtajARla. I aMtajAR
 
 \medskip
 
-I naDuve samitiya sadasayxrAgidadx shirxV enf. basavArAdhayx hAgU DA. esf. vidAyxshaMkarf, porx. esf, naMjuMDayayxnavaru vidhivasharAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV,  DA. ecf.vi.\break nAgarAjarAvf, DA. enf.esf. tArAnAtha, DA. si. shivakumArasAvxmi, shirxV. Arf.esf. pUNARnaMda, DA. naMdiVshf haMceravaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBegaLanunx naDesi saBAparxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTuvige oMdu sapxSaTx rUpavanunx niVDitu. I saMdaBaRdalilx je{esf}{esf} mahA vidAyxpiVThada shirxV basavaNaNxnavaru hAgU meYsUru vishavxvidAyxnilayada parxsArAMgada nivaqtatx nwkararAda shirxVmati kamalamamxnavaru karaDu tidudxvalilx mADida sahAya bahu doDaDxdu. hiVge aMtimavAgi niGaMTu sidadhxvAyitu.
+I naDuve samitiya sadasayxrAgidadx shirxV enf. basavArAdhayx hAgU DA. esf. vidAyxshaMkarf, porx. esf, naMjuMDayayxnavaru vidhivasharAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV,  DA. ecf.vi. nAgarAjarAvf, DA. enf.esf. tArAnAtha, DA. si. shivakumArasAvxmi, shirxV. Arf.esf. pUNARnaMda, DA. naMdiVshf haMceravaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBegaLanunx naDesi saBAparxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTuvige oMdu sapxSaTx rUpavanunx niVDitu. I saMdaBaRdalilx je{esf}{esf} mahA vidAyxpiVThada shirxV basavaNaNxnavaru hAgU meYsUru vishavxvidAyxnilayada parxsArAMgada nivaqtatx nwkararAda shirxVmati kamalamamxnavaru karaDu tidudxvalilx mADida sahAya bahu doDaDxdu. hiVge aMtimavAgi niGaMTu sidadhxvAyitu.
 
 
 \medskip
@@ -254,7 +254,7 @@ I garxMthakekx beVkAda dAshaRnikateyanunx, tAtitxvXka savxrUpavanunx niVDidavaru
 
 \medskip
 
-I pAriBASika garxMtha racane sArataH oMdu vidavxtetxya kAyaR. idu eSuTx sharxmayukatxvoV aSeTxV veYjAcnxnikavAgi racita\-vAgide. idu I rUpavanunx taLeyalu kAraNarAda vidAvxMsaru hAgU saMpAdaka maMDaLiya sadasayxrugaLAda porx. ji.esf.\break sidadhxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha, DA. ecf.vi. nAgarAjarAvf hAgU saMsakxqqta viVrasheYva pAri\-BASika padakoVshavanunx kananxDakekx anuvAdisikoTuTx I yoVjanege adhikaqta cAlane niVDida DA. si. shivakumArasAvxmi, kAyaRnivARhaka\break saMpAdakaroMdige niraMtaravAgi sahakarisutatx, parxti haMtadalUlx karaDu parxtiyanunx visheVSavAgi parishiVlisikoTaTx shirxV Arf.esf. pUNARnaMda ivarelalxra seVveyanunx kaqtajacnxteyiMda samxrisutetxVve. niGaMTuvina kAyaRdalilx I elalx mahaniVyara pAlogxLuLxvike niGaMTuvige oMdu Ganate taMdu\-koTiTxde. ivarelalxrigU haqtUpxvaRka kaqtajacnxtegaLu.
+I pAriBASika garxMtha racane sArataH oMdu vidavxtetxya kAyaR. idu eSuTx sharxmayukatxvoV aSeTxV veYjAcnxnikavAgi racita\-vAgide. idu I rUpavanunx taLeyalu kAraNarAda vidAvxMsaru hAgU saMpAdaka maMDaLiya sadasayxrugaLAda porx. ji.esf.\break sidadhxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha, DA. ecf.vi. nAgarAjarAvf hAgU saMsakxqqta \hbox{viVrasheYva} pAri\-BASika padakoVshavanunx kananxDakekx anuvAdisikoTuTx I yoVjanege adhikaqta cAlane niVDida DA. si. shivakumArasAvxmi,\break kAyaRnivARhaka saMpAdakaroMdige niraMtaravAgi sahakarisutatx, parxti haMtadalUlx karaDu parxtiyanunx visheVSavAgi parishiVlisikoTaTx shirxV Arf.esf. pUNARnaMda ivarelalxra seVveyanunx kaqtajacnxteyiMda samxrisutetxVve. niGaMTuvina kAyaRdalilx I elalx mahaniVyara pAlogxLuLxvike niGaMTuvige oMdu Ganate taMdu\-koTiTxde. ivarelalxrigU haqtUpxvaRka kaqtajacnxtegaLu.
 
 \medskip
 
@@ -266,13 +266,13 @@ I garxMtha rUpagoLuLxvalilx sahakarisida parxkaTaNa viBAgada hiMdina nideVRshaka
 
 \medskip
 
-I garxMthavanunx acucxkaTATxgi mudirxsikoTaTx \underline{\qquad\qquad} matutx I garxMthakekx sahAyadhanavanunx niVDida kananxDa matutx saMsakxqqti ilAKege visheVSa kaqtajacnxtegaLu.
+I garxMthavanunx acucxkaTATxgi mudirxsikoTaTx lakiSxmXV mudarxNAlaya, beMgaLUru matutx I garxMthakekx sahAyadhanavanunx niVDida kananxDa matutx saMsakxqqti ilAKege visheVSa kaqtajacnxtegaLu.
 
 \medskip
 
 I pAriBASika padakoVshavu viVrasheYva-liMgAyata dhAmiRka, sAmAjika, sAMsakxqqtika adhayxyana, adhAyxpana hAgU\break saMshoVdhanege bahaLa upayukatx\-vAgali eMbudu I niGaMTu racaneya hiMdina AshayavAgide. samagarxteya kaDege iTaTx daqDha hejejx idAdarU ideV saMpUNaRveMba kalapxne namamxdalalx.
 
-\vskip 1.5cm
+\vskip 1cm
 
 \hfill {\bf DA. naMdiVshf haMce}\qquad\,
 
