--- a/parxkAshakaranudi.tex
+++ b/parxkAshakaranudi.tex
@@ -10,19 +10,19 @@ sumAru sAvira vaSaRgaLa hiMde coVLacakerxVshavxrana pArxthaRneya meVrege Adijaga
 
 \medskip
 
-I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha'' saMsakxqqta garxMthavu namamx saMsethxyiMda 2011\,ralilx parxkaTavAyitu. kanARTaka sakARrada aMdina kananxDa matutx saMsakxqqti sacivarAda mAnayx shirxV goVviMda kArajoVLara adhayxkaSxte\-yalilx beMgaLUrinalilx naDeda kaqti biDugaDe samAraMBadalilx upasithxtaridadx halavAru vidAvxMsaru I mwlika kaqtiya kananxDa anuvAda \hbox{tutARgi} AgabeVkeMdu otAtxyisidaru. avara pirxVtipUvaRka Agarxhakekx sapxMdisida mAnayx sacivaru ilAKeyiMda agatayx anudAna\break niVDuvudAgi sathxLadalilxyeV GoVSisidaru aSeTxV alalxde saMsethxyavaru parxsAthxvane salilxsida kUDale maMjUrAti AdeVshavanUnx\break horaDisikoTaTxru. saMsakxqqti matutx vidavxtitxna kelasagaLa kuritaMte shirxV kArajoVLara I Asakitxyanunx mukatxkaMThadiMda shAlxGisutetxVve. hiVge modalige anuvAdaveMdu pArxraMBavAda I kAyaR tananx savxrUpa, vAyxpitxgaLanunx visatxrisikoMDu hosadoMdu baqhatf \hbox{yoVjaneye} Agi rUpu taLeyitu. mUlada kaqtiyu saMsakxqqta AgamagaLige bahuteVka niSaThxvAgidadxre. I hosa kaqtiyu kananxDa viVrasheYva kAvayxgaLu matutx vacanagaLanUnx - kelavu veVLe aparUpada rUDhiya padagaLanUnx - aLavaDisikoMDitu. idara vivara\-gaLanunx kAyaR\-nivARhaka saMpAdaka DA. naMdiVshf haMceyavaru ``niveVdane''yalilx visAtxravAgi vivarisiruvudariMda matetx adaninxlilx heVLabayasuvudilalx. iMthadoMdu mahatAvxkAMkeSxya kaqti rUpugoLaLxlu sahakarisida saMpAdaka maMDaLiya elalx vidavxnamxNigaLige, vividha riVtiyalilx sAhitayxka sahAyavanunx niVDida vidAvxMsarige, pariNatarige matutx salahegArarige nAvu ABArigaLAgidedxVve.
+I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha'' saMsakxqqta garxMthavu namamx saMsethxyiMda 2011\,ralilx parxkaTavAyitu. kanARTaka sakARrada aMdina kananxDa matutx saMsakxqqti sacivarAda mAnayx shirxV goVviMda kArajoVLara adhayxkaSxte\-yalilx beMgaLUrinalilx naDeda kaqti biDugaDe samAraMBadalilx upasithxtaridadx halavAru vidAvxMsaru I mwlika kaqtiya kananxDa anuvAda \hbox{tutARgi} AgabeVkeMdu otAtxyisidaru. avara pirxVtipUvaRka Agarxhakekx sapxMdisida mAnayx sacivaru ilAKeyiMda agatayx anudAna\break niVDuvudAgi sathxLadalilxyeV GoVSisidaru aSeTxV alalxde saMsethxyiMda parxsAthxvane salilxsida kUDale maMjUrAti niVDi, haNa biDugaDegoLisidaru. saMsakxqqti matutx vidavxtitxna kelasagaLa kuritaMte shirxV kArajoVLara I Asakitxyanunx mukatxkaMThadiMda shAlxGisutetxVve. hiVge modalige anuvAdaveMdu pArxraMBavAda I kAyaR tananx savxrUpa, vAyxpitxgaLanunx visatxrisikoMDu hosadoMdu baqhatf \hbox{yoVjaneye} Agi rUpu taLeyitu. mUlada kaqtiyu saMsakxqqta AgamagaLige bahuteVka niSaThxvAgidadxre. I hosa kaqtiyu kananxDa viVrasheYva kAvayxgaLu matutx vacanagaLanUnx - kelavu veVLe aparUpada rUDhiya padagaLanUnx - aLavaDisikoMDitu. idara vivara\-gaLanunx kAyaR\-nivARhaka saMpAdaka DA. naMdiVshf haMceyavaru ``niveVdane''yalilx visAtxravAgi vivarisiruvudariMda matetx adaninxlilx heVLabayasuvudilalx. iMthadoMdu mahatAvxkAMkeSxya kaqti rUpugoLaLxlu sahakarisida saMpAdaka maMDaLiya elalx vidavxnamxNigaLige, vividha riVtiyalilx sAhitayxka sahAyavanunx niVDida vidAvxMsarige, pariNatarige matutx salahegArarige nAvu ABArigaLAgidedxVve.
 
 \medskip
 
-parxkaTaNa viBAgada hiMdina nideRVshakarAda shirxV ke.si. shivapapx, parxsutxta nideVRshakarAda shirxV porx. morabada malilxkAjuRna, porx. \hbox{maleyUru} gurusAvxmi, shirxV Ti.pi. parxBusAvxmi, visheVSataH shirxV nagaleR shivakumArfravarige namamx kaqtajacnxtegaLu salulxtatxve.\break yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. \hbox{yoVgAnaMda}, avara sibabxMdivagaRda shirxV ajuRnf kashayxpf, shirxV shivashaMkarf, shirxV rAGaveVMdarx parxsAdf matutx shirxVmati parxtiBa, muKapuTa vinAyxsakarAda shirxV maMjunAthfravara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
+parxkaTaNa viBAgada hiMdina nideRVshakarAda shirxV ke.si.~shivapapx, parxsutxta nideVRshakarAda porx.~morabada malilxkAjuRna, shirxV Ti.pi. parxBusAvxmi, shirxV nagaleR shivakumArfravarige kaqtajacnxtegaLu salulxtatxve. yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx\break nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. \hbox{yoVgAnaMda}, avara sibabxMdivagaRda shirxV ajuRnf kashayxpf, shirxV shivashaMkarf, shirxV rAGaveVMdarx parxsAdf matutx shirxVmati parxtiBA, muKapuTa vinAyxsakarAda shirxV maMjunAthfravara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
 
 \medskip
 
-yoVjanege dhanasahAyavanonxdagisida kanARTaka sakARrada kananxDa matutx saMsakxqqti ilAKege - visheVSataH aMdu ilAKeya sacivarAgidadx, iMdu upa muKayxmaMtirxyAgiruva shirxV goVviMda kArajoVLarige - aBimAnapUvaRka parxNAmagaLu.
+yoVjanege AthiRka sahAyavanonxdagisida kanARTaka sakARrada kananxDa matutx saMsakxqqti ilAKege - visheVSataH aMdu ilAKeya sacivarAgidadx, iMdu upa muKayxmaMtirxyAgiruva shirxV goVviMda kArajoVLarige - aBimAnapUvaRka vaMdanegaLu.
 
 \medskip
 
-I yoVjaneya dhiVshakitx matutx kirxyAshakitxgaLAgi mAgaRdashaRna niVDida paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx\break mahAsAvxmigaLavaru matutx vijayapura jAcnxnayoVgAsharxmada nirABAri caramUtiRgaLAda pUjayx shirxV sidedhxVshavxra sAvxmigaLavarige namamx gwravada maNiharavanunx salilxsabayasutetxVne.
+I yoVjaneya dhiVshakitx matutx kirxyAshakitxgaLAgi mAgaRdashaRna niVDida paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx\break mahAsAvxmigaLavaru matutx vijayapura jAcnxnayoVgAsharxmada pUjayx shirxV sidedhxVshavxrasAvxmigaLavarige namamx gwravada maNiharavanunx salilxsa\-bayasutetxVne.
 
 \medskip
 
